manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app: node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-pod
  
  template:
    metadata:
      name: node-pod
      labels:
        app: node-pod
    spec:
      containers:
        - name: blog-node-container
          image: andraide/backend
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
   name: node-service
   labels:
     app: node-service
      
spec:
   type: LoadBalancer
   ports:
     - protocol: TCP
       port: 3000
       targetPort: 3000
   selector:
     app: node-pod
---

apiVersion: apps/v1

kind: Deployment

metadata:
  name: frontend-deployment
  labels:
    app: frontend-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-pod

  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend-pod

    spec:
      containers:
        - name: frontend-container
          image: andraide/frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 80 
---


apiVersion: v1

kind: Service

metadata:
  name: frontend-service
  labels:
    app: frontend-service
    
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: frontend-pod
---

apiVersion: apps/v1

kind: Deployment

metadata:
  name: mongo-deployment
  labels:
    app: mongo-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-pod

  template:
    metadata:
      name: mongo-pod
      labels:
        app: mongo-pod

    spec:
      containers:
        - name: mongodb-container
          image: mongo
          ports:
            - containerPort: 27017 
---

apiVersion: v1

kind: Service

metadata:
  name: mongo-service
  labels:
    app: mongo-service
    
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: mongo-pod
