manifeststable.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: angular-webapp
  name: angular-webapp
spec:
  replicas: 5
  selector:
    matchLabels:
      app: angular-webapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: angular-webapp
    spec:
      containers:
      - image: docker.io/andraide/testfive
        name: webapp
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 8080 
status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: angular-webapp
  labels:
    run: angular-webapp
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: angular-webapp
  type: NodePort
