manifestmongo.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      restartPolicy: Always
      containers:
        - name: mongodb-container
          image: "de13/mongo-myapp"
          volumeMounts:
            - name: data-storage
              mountPath: /var/lib/mongo
          ports:
            - containerPort: 27017
      volumes:
        - name: data-storage
          persistentVolumeClaim:
            claimName: data-claim
        
---

kind: Service
apiVersion: v1
metadata:
  name: mongodb-svc
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 27017

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: nodejs-container
          image: "andraide/testseven"
---

apiVersion: v1
kind: Service
metadata:
  name: nodejs-svc
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
spec:
  rules:
   - http:
      paths:
        - path: /testseven
          pathType: Prefix
          backend:
            service:
              name: nodejs-svc
              port:
                number: 8080
